--- a/index.html
+++ b/index.html
@@ -5,5 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Welcome to my DOM</h1>
+    </header>
+    <main>
+      <h1>My Awesome Dom de baba</h1>
+      <ul>
+        <li>Jalali set</li>
+        <li>Shafayet</li>
+        <li>bonobash</li>
+      </ul>
+    </main>
+  </body>
 </html>
