--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css" />
+    <style>
+      li {
+        color: red;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -18,4 +24,8 @@
       </ul>
     </main>
   </body>
+  <script src="js/dom.js"></script>
+  <script>
+    console.log("adding JS inside the html file");
+  </script>
 </html>
