--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         eius doloribus molestias?
       </p>
     </header>
-    <main>
+    <main id="main-container">
       <h1>My Awesome Dom de baba</h1>
       <ul>
         <li>Jalali set</li>
@@ -48,7 +48,7 @@
       </section>
       <section id="places-container" class="large-text">
         <h1 id="places-title">Places I like to visit</h1>
-        <ul>
+        <ul id="places-list">
           <li class="important-places">Soondorban</li>
           <li class="important-places">BAndorban</li>
           <li class="important-places">Kataban</li>
@@ -58,8 +58,8 @@
     </main>
   </body>
   <script src="js/dom.js"></script>
-  <script src="js/styleInJs.js"></script>
   <script src="js/append.js"></script>
+  <script src="js/styleInJs.js"></script>
   <script>
     const liCollection = document.getElementsByTagName("li");
     // console.log(liCollection);
