--- a/summary.html
+++ b/summary.html
@@ -6,9 +6,9 @@
     <title>Summary</title>
   </head>
   <body>
-    <main>
-      <section>
-        <h1>Section title-1</h1>
+    <main id="main-container">
+      <section id="first-section">
+        <h1 class="section-title">Section title-1</h1>
         <ul>
           <li>LIst item-1</li>
           <li>LIst item-2</li>
@@ -16,9 +16,9 @@
           <li>LIst item-4</li>
         </ul>
       </section>
-      <section>
-        <h1>Section title-2</h1>
-        <ul>
+      <section id="second-section">
+        <h1 class="section-title">Section title-2</h1>
+        <ul id="second-list">
           <li>LIst item-1</li>
           <li>LIst item-2</li>
           <li>LIst item-3</li>
@@ -26,7 +26,7 @@
         </ul>
       </section>
       <section>
-        <h1>Section title-3</h1>
+        <h1 class="section-title">Section title-3</h1>
         <ul>
           <li>LIst item-1</li>
           <li>LIst item-2</li>
@@ -40,5 +40,6 @@
     </script>
     <script src="js/first.js"></script>
     <script src="js/second.js"></script>
+    <script src="js/third.js"></script>
   </body>
 </html>
